# pisco

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pisco.py  pyproject.toml  requirements.txt  tasks.py
.github/: dependabot.yml
.github/actions/set-up-python-environment/: action.yml
.github/workflows/: continuous-integration.yml  main.yml
deployment/: README.md  hosts  pisco.playbook.ansible.yml
deployment/etc/lightdm/lightdm.conf.d/: 01_fix_auto_re_login.conf
deployment/home/pi/: .xsession.j2
src/: pisco.py
src/pisco/: __init__.py  __main__.py  _application.py  application.py  backlight.py  command_line_interface.py  graphical_user_interface.py  image.py  sonos_device.py
src/pisco/hardware/: __init__.py
src/pisco/input_output/: backlight.py  http_image.py  sonos_device.py
src/pisco/user_interface/: command_line_interface.py  graphical_user_interface.py
stubs/soco/: __init__.pyi  core.pyi  data_structures.pyi  discovery.pyi  events.pyi  events_base.pyi  music_library.pyi  services.pyi
tests/: test_.py  test_backlight.py  test_pisco.py
tests/pisco/hardware/: test_backlight.py
tests/pisco/input_output/: test_backlight.py  test_http_image.py
