[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_unimported = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs" # needed for stubtest
strict = true
warn_unreachable = true

[tool.poetry]
name = "pisco"
version = "0.0.0"   # Version will be set by CI workflow based on git tag.
description = "Keyboard-only controller for Sonos speakers"
authors = ["Christoph Gietl <christophgietl@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/christophgietl/pisco"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
Pillow = "^10.4"
platformdirs = "^4.2"
python-json-logger = "^2.0"
soco = "^0.30"

[tool.poetry.group.dev.dependencies]
Faker = "^26.0"
mypy = "^1.10"
pre-commit = "^3.7"
pytest = "^8.2"
pytest-cov = "^5.0"

[tool.poetry.scripts]
pisco = "pisco.user_interface.command_line_interface:run"

[tool.ruff]
src = ["src", "stubs", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "COM812"]

[tool.ruff.lint.per-file-ignores]
"stubs/*" = ["FBT", "N815", "PLR0913"]
"tests/*" = ["D", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
