[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
files = "."
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs" # needed for stubtest
strict = true
warn_incomplete_stub = true
warn_unreachable = true

[tool.poetry]
name = "pisco"
version = "0.0.0"   # Version will be set by CI workflow based on git tag.
description = "Keyboard-only controller for Sonos speakers"
authors = ["Christoph Gietl <christophgietl@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/christophgietl/pisco"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
Pillow = "^11.1"
platformdirs = "^4.3"
python-json-logger = "^3.2"
soco = "^0.30"

[tool.poetry.group.dev.dependencies]
Faker = "^33.3"
mypy = "^1.14"
pre-commit = "^4.1"
pytest = "^8.3"
pytest-cov = "^6.0"

[tool.poetry.scripts]
pisco = "pisco.user_interface.command_line_interface:run"

[tool.ruff]
src = ["src", "stubs", "tests"]
target-version = "py39"

[tool.ruff.lint]
ignore = ["COM812", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"stubs/*" = ["FBT", "N815", "PLR0913"]
"tests/*" = ["D", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
