[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.2"] # needed for the dependency-groups section

[dependency-groups]
dev = [
    "Faker==37.11.0",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0"
]

[project]
name = "pisco"
version = "0.0.0"   # Version will be set by CI workflow based on git tag.
description = "Keyboard-only controller for Sonos speakers"
authors = [
    { name = "Christoph Gietl", email = "christophgietl@users.noreply.github.com" }
]
dependencies = [
    "click~=8.1",
    "Pillow~=11.3",
    "platformdirs~=4.4",
    "python-json-logger~=4.0",
    "soco~=0.30.12"
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
pisco = "pisco.user_interface.command_line_interface:run"

[project.urls]
GitHub = "https://github.com/christophgietl/pisco"
Repository = "https://github.com/christophgietl/pisco.git"

[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
files = "."
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs" # needed for stubtest
strict = true
strict_bytes = true  # will become the default in mypy 2.0
warn_incomplete_stub = true
warn_unreachable = true

[tool.ruff]
src = ["src", "stubs", "tests"]
target-version = "py39"

[tool.ruff.lint]
ignore = ["COM812", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"stubs/*" = ["FBT", "N815", "PLR0913"]
"tests/*" = ["D", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
